[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/slime-house.png" type="Texture" id=1]
[ext_resource path="res://assets/light-texture.png" type="Texture" id=2]
[ext_resource path="res://interactives/House.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Movement Inner"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Movement Outer"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Transition"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 38, 21, 33, 5, 27, -4, 15, -11, 4, -12, -7, -8, -24, 5, -34, 17, -44, 39, 34, 39, 39, 32, 44, 33, 48, 40, 2, 40, -47, 39, -42, 20, -33, 6, -25, -5, -12, -13, -2, -17, 7, -18, 14, -27, 24, -24, 22, -13, 34, -7, 43, 10, 46, 19, 40, 25 )

[node name="Slime House" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
"anims/Movement Inner" = SubResource( 1 )
"anims/Movement Outer" = SubResource( 2 )
anims/Transition = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 50, 40, 44, 34, 38, 34, 33, 39, -11, 39, -17, 33, -33, 33, -39, 28, -34, 17, -24, 4, -15, -4, -6, -8, 3, -12, 12, -12, 19, -9, 24, -5, 31, -2, 38, 22, 41, 22, 44, 22, 46, 18, 37, -2, 36, -7, 22, -13, 25, -21, 13, -25, 8, -17, -1, -17, -10, -13, -22, -7, -32, 3, -35, 8, -42, 20, -48, 40, 34, 40 )

[node name="Area" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area"]
polygon = PoolVector2Array( -34, 11, -20, -6, 6, -15, 25, -10, 35, -1, 41, 13, 40, 38, -46, 38 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 13, 30 )
scale = Vector2( 0.0903333, 0.0633333 )
texture = ExtResource( 2 )
color = Color( 0.905882, 0.729412, 0.0392157, 1 )
energy = 1.12
shadow_enabled = true
shadow_gradient_length = 7.8

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
